更新hbase学习笔记。